<resources>
    <string name="app_name">MusicApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="file_name">File Name</string>
    <string name="now_playing">Now Playing</string>
    <string name="_1_28">1:28</string>
    <string name="_4_28">4:28</string>
    <string name="home">Home</string>
    <string name="songs">Songs</string>
    <string name="settings">Settings</string>
    <string name="division">|</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="search">Search</string>
    <string name="album_details">Album Details</string>
    <string name="add_to_favorites">Add to Favorites</string>
    <string name="share">Share</string>
    <string name="play">Play</string>
    <string name="ahmed_ali_mahmoud">Ahmed Ali Mahmoud</string>
</resources>