<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutPlayer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="100dp"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/background_curved"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/viewBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/background_curved"
        app:layout_constraintTop_toTopOf="parent" />


    <RelativeLayout
        android:id="@+id/playerLayout"
        android:layout_width="match_parent"
        android:layout_height="350dp">


        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/songImageContainer"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_centerInParent="true"
            android:background="@drawable/background_image"
            android:backgroundTint="@color/white"
            android:interpolator="@android:anim/linear_interpolator"
            android:scaleType="centerCrop"
            app:riv_oval="true" />

        <me.tankery.lib.circularseekbar.CircularSeekBar
            android:id="@+id/seekBar"
            android:layout_width="270dp"
            android:layout_height="270dp"
            android:layout_centerInParent="true"
            app:cs_circle_color="#EDEDED"
            app:cs_circle_progress_color="@color/purple_500"

            app:cs_circle_stroke_width="5dp"
            app:cs_disable_pointer="false"
            app:cs_pointer_color="@color/purple_500" />


        <TextView
            android:id="@+id/tvDurationPlayed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songImageContainer"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="10dp"

            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@id/definition"
            android:text="@string/_1_28"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/definition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songImageContainer"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="@string/division" />

        <TextView
            android:id="@+id/tvDurationTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songImageContainer"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/definition"
            android:text="@string/_4_28"
            android:textColor="@color/black" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/songDetails"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/playerLayout">

        <TextView
            android:id="@+id/songName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:maxLength="30"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/artistName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/songName"
            android:layout_centerHorizontal="true"
            android:maxLength="30"
            android:maxLines="1"
            android:text=""
            android:textColor="@color/gray"
            android:textSize="15sp" />
    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/relative_layout_for_bottom"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/songDetails"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true">

        <!--        <ImageView-->
        <!--            android:id="@+id/btnShuffle"-->
        <!--            android:layout_width="35dp"-->
        <!--            android:layout_height="35dp"-->
        <!--            android:layout_alignParentStart="true"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginStart="36dp"-->
        <!--            android:src="@drawable/ic_shuffle" />-->

        <!--        <ImageView-->
        <!--            android:id="@+id/btnRepeat"-->
        <!--            android:layout_width="35dp"-->
        <!--            android:layout_height="35dp"-->
        <!--            android:layout_alignParentEnd="true"-->
        <!--            android:layout_centerVertical="true"-->
        <!--            android:layout_marginEnd="36dp"-->
        <!--            android:src="@drawable/ic_repeat" />-->


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnPrevious"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/btnPlayPause"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_skip_previous"
            app:backgroundTint="#FFFFFF"
            app:fabCustomSize="40dp"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnNext"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/btnPlayPause"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_skip_next"
            app:backgroundTint="#FFFFFF"
            app:fabCustomSize="40dp"
            app:tint="@null" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:contentDescription="@string/app_name"
            android:id="@+id/btnPlayPause"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:src="@drawable/ic_play"
            app:backgroundTint="#FFFFFF"
            app:tint="@null" />

    </RelativeLayout>


</RelativeLayout>